<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:visibility="visible">

    <TextView
        android:id="@+id/pantalla"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:gravity="center|end"
        android:text="@string/tv1"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center|end"
        android:text="@string/tvResultado"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pantalla" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp">

            <Button
                android:id="@+id/buttonAC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnAC"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSiete"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnCuatro"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnUno"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonPorcentaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnPorcentaje"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="66dp"
            tools:layout_editor_absoluteY="0dp">

            <Button
                android:id="@+id/buttonB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnBorrar"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnOcho"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnCinco"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnDos"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnCero"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="0dp">

            <Button
                android:id="@+id/buttonDividir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnDividir"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnNueve"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSeis"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnTres"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonPunto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnPunto"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="246dp"
            tools:layout_editor_absoluteY="0dp">

            <Button
                android:id="@+id/buttonMultiplo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnMultiplicar"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonMenos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnMenos"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonSumar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSumar"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonIgual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineSpacingExtra="24sp"
                android:text="@string/btnIgual"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>